@@ -1,3 +1,8 @@
+ags (3.14.12)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed block controls either bridge or UI
+
 ags (3.14.11)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
